[gd_scene load_steps=2 format=3 uid="uid://b1op3vyakvobt"]

[ext_resource type="Script" path="res://scenes/account_info.gd" id="1_ld1cn"]

[node name="AccountInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ld1cn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 66.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Your name: "

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Save
"

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Load
"

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Delete"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/DeleteButton" to="." method="_on_delete_button_pressed"]
